# govai

./: .gitignore  Dockerfile  README.md  agent.py  api_models.py  app.py  baseline.py  env.py  grader.py  hi.py  index.html  inference.py  main.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  reward.py  run_demo.py  tailwind.config.js  vercel.json  vite.config.js
configs/: openenv.yaml
env/: gov_env.py
graders/: __init__.py  budget_grader.py  complaint_grader.py  policy_grader.py
server/: app.py
src/: App.jsx  index.css
src/components/: GlassPanel.jsx  MetricCard.jsx  StatusBadge.jsx
tasks/: __init__.py  budget_task.py  complaint_task.py  policy_task.py
