[project]
name = "govtai-ops"
version = "0.0.1"
description = "GovtAI Ops OpenEnv environment for government task allocation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "openai>=2.7.2,<3.0",
    "openenv-core>=0.2.0",
    "gradio",
    "transformers",
    "torch",
    "python-dotenv"
]

[project.scripts]
server = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
